# generative-grammar

./: .gitignore  LICENSE  README.md  project.yaml  pyproject.toml
.github/workflows/: ci.yml
artifacts/: design_alignment_report.md
configs/: default.yaml
docs/: method.md  schema.md
experiments/: __init__.py  generators.py
src/generative_grammar/: __init__.py  cli.py
tests/: test_generator.py
thresholds/: generators.yaml
