[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "generative-grammar"
version = "1.0.0"
description = "Reproducible grammar-controlled rhythm corpus generator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["numpy>=1.24", "pyarrow>=14", "PyYAML>=6"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
generative-grammar = "generative_grammar.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/generative_grammar", "experiments"]

[tool.pytest.ini_options]
testpaths = ["tests"]
